feature(rework-bugs): Added functionality to update quality investigations.